changed html and css to final desktop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Stats preview card component</title>
   <link rel="stylesheet" href="styles.css">
   </style>
@@ -19,7 +21,7 @@
     <li>
       <ul><p class="number">10k+</p><p class="text">companies</p></ul>
       <ul><p class="number">314</p><p class="text">templates</p></ul>
-    <ul><p class="number">12m+</p><p class="text">queries</p></ul>
+      <ul><p class="number">12m+</p><p class="text">queries</p></ul>
     </li>
   </div>
   <div class="image-bg">
